# reh

./: .gitignore  Cargo.toml  PKGBUILD  README.md
.github/workflows/: rust.yml
pkg/reh/: .BUILDINFO  .MTREE  .PKGINFO
src/: main.rs  process_file.rs  process_vd.rs  process_wallpaper.rs
