[package]
name = "ffmpeg_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
clap = { version = "4.2.5", features = ["derive"] }
directories-next = "2.0.0"
ffmpeg-next = { version = "6.0.0", features = ["image"] }
wallpaper = "3.2.0"
