[package]
name = "reh"
version = "0.1.0"
edition = "2021"
description = "Video To Live Wallpaper For x86_64 gnu linux"
authors = ["Linus Walker"]
license = "MIT"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
clap = { version = "4.2.5", features = ["derive"] }
directories-next = "2.0.0"
ffmpeg-next = { version = "6.0.0", features = ["image"] }
mime = "0.3.17"
mime_guess = "2.0.4"
wallpaper = "3.2.0"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
